<resources>
    <string name="app_name">Facts Africa</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Sign In</string>
    <string name="login">Login</string>
    <string name="logoDescription">Logo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved Invoices</string>
    <string name="title_transactions">Transactions</string>
    <string name="sort">Sort</string>
    <string name="appbar_logo">Appbar Logo</string>
    <string name="invoices">Invoices</string>
    <string name="facts_logo">Facts Logo</string>
    <string name="account">Account</string>
    <string name="invoice_image">Invoice Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="all_my_invoices">All My Invoices</string>
    <string name="all_my_buyers">All My Buyers</string>
    <string name="logout">Logout</string>
    <string name="saved_invoices">Saved Invoices</string>
    <string name="batched_invoices">Batch Invoices</string>
    <string name="all_saved">All saved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_buyer">BuyerActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_invoice"> Invoice</string>
    <string name="invoice_number">Invoice Number: </string>
    <string name="_87">87</string>
    <string name="company_address">Company Details: </string>
    <string name="company_name">Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="physical_address">Physical Address</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="add_recipient">Recipient</string>
    <string name="to_client">To Client</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_amount">...............</string>
    <string name="discount">Discount</string>
    <string name="_8">8%</string>
    <string name="tax">Tax</string>
    <string name="_16">16%</string>
    <string name="total">Total</string>
    <string name="due_date">Due Date</string>
</resources>
