<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/invoicesToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/accountToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/windowBackground"
                app:menu="@menu/account_menu">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/facts_logo"
                        android:src="@drawable/facts_logo_final" />
                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_invoice" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/address_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:elevation="10dp"
            style="@style/CardView.Light"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/invoicesToolbar"
            app:layout_constraintStart_toStartOf="@+id/invoicesToolbar"
            app:layout_constraintTop_toBottomOf="@+id/invoicesToolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/invoice_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_number"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/invoice_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date"
                    android:layout_alignParentEnd="true"
                    android:drawableStart="@drawable/ic_date_range_black_24dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/invoice_number_sent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/invoice_label"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/_87"
                    style="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/company_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_below="@id/invoice_number_sent"
                    android:layout_marginStart="8dp"
                    style="@style/TextAppearance.AppCompat.Headline"/>

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:layout_below="@id/company_address_label"
                    android:layout_marginStart="8dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/company_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_below="@id/company_name"
                    android:layout_marginStart="8dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/company_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:layout_below="@id/company_phone"
                    android:layout_marginStart="8dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/company_physical_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physical_address"
                    android:layout_below="@id/company_email"
                    android:layout_marginStart="8dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/vendor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendor_name"
                    android:layout_below="@id/company_address_label"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/vendor_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_below="@id/vendor_name"
                    android:layout_marginEnd="24dp"
                    android:layout_alignParentEnd="true"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/vendor_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/company_phone"
                    android:layout_marginEnd="24dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/vendor_physical_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/physical_address"
                    android:layout_below="@id/company_email"
                    android:layout_marginEnd="24dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/address_card"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="@+id/address_card"
            app:layout_constraintTop_toBottomOf="@+id/address_card">

            <TextView
                android:id="@+id/add_client_to_invoice"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/ic_add_circle_outline_black_24dp"
                android:text="@string/to_client" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/address_card"
            app:layout_constraintStart_toStartOf="@+id/address_card"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/item"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="8dp"
                android:text="@string/quantity"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="8dp"
                android:text="@string/amount"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                style="@style/Divider"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/item_one"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:text="" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:text="" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:text="" />

            <TextView
                android:id="@+id/item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:text="@string/subtotal"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtotal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="120dp"
                android:text="@string/subtotal_amount" />

            <View
                style="@style/Divider"
                android:layout_marginStart="12dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="12dp" />

            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="170dp"
                android:text="@string/discount" />

            <TextView
                android:id="@+id/discount_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="170dp"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="190dp"
                android:text="@string/tax" />

            <TextView
                android:id="@+id/tax_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="190dp"
                android:text="@string/_16" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="220dp"
                android:text="@string/total"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_amount_to_be_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="230dp"
                android:text="@string/subtotal_amount" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/materialCardView3"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView3"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_email_black_24dp"
            app:tint="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>