<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/invoicesToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?android:attr/windowBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/accountToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/account_menu">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/facts_logo_final"
                    android:contentDescription="@string/facts_logo" />
            </LinearLayout>
            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/invoicesToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/profileName"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Supplier Maker"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage"/>

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="suppliermaker@mail.com"
        app:layout_constraintLeft_toLeftOf="@id/profileName"
        app:layout_constraintTop_toBottomOf="@id/profileName"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintLeft_toLeftOf="@id/profileEmail"
        app:layout_constraintTop_toBottomOf="@id/profileEmail"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/field1"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_storage_black_24dp"
                android:text="@string/all_my_invoices"
                android:padding="5dp"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/field2"/>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:id="@+id/invoiceNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/field1"
                app:layout_constraintBottom_toBottomOf="@id/field1"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="1"/>

            <TextView
                android:id="@+id/field2"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_supervisor_account_black_24dp"
                android:text="@string/all_my_buyers"
                android:padding="5dp"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/field1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:id="@+id/buyerNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/field2"
                app:layout_constraintBottom_toBottomOf="@id/field2"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>